--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="navbar">
   <div class="navbar__container">
     <div class="navbar__item">
-      <a routerLink="/screen1" routerLinkActive="navbar__link--active" class="navbar__link">Pantalla 1</a>
+      <a routerLink="/screen1" routerLinkActive="navbar__link--active" class="navbar__link">Seccion 1</a>
     </div>
     <div class="navbar__item">
-      <a routerLink="/screen2" routerLinkActive="navbar__link--active" class="navbar__link">Pantalla 2</a>
+      <a routerLink="/screen2" routerLinkActive="navbar__link--active" class="navbar__link">Seccion 2</a>
     </div>
     <div class="navbar__item">
-      <a routerLink="/screen3" routerLinkActive="navbar__link--active" class="navbar__link">Pantalla 3</a>
+      <a routerLink="/screen3" routerLinkActive="navbar__link--active" class="navbar__link">Seccion 3</a>
     </div>
   </div>
 </div>
